# justchat

./: README.md
server/: .env.example  Dockerfile  compose.override.yml  compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
server/alembic/: env.py
server/alembic/versions/: 3d85918e00ea_cascade_delete_reactions.py  9062de5a3f8f_added_reaction_table.py  d59bb817a6ce_initial.py
server/chat_server/: deps.py  main.py  settings.py
server/chat_server/api/: auth.py  deps.py
server/chat_server/api/dashboard/: users.py
server/chat_server/connection/: context.py  manager.py
server/chat_server/database/: __init__.py  core.py  crud.py  deps.py  factories.py  models.py
server/chat_server/database/repositories/: channel.py  (+7 more)
server/chat_server/handler/: channel_handler.py  chat_handler.py  commands_handler.py  decorators.py  router.py
server/chat_server/infrastructure/: connection_registry.py  manager.py
server/chat_server/protocol/: emotes.py  enums.py  messages.py
server/chat_server/schemas/: message.py  user.py
server/chat_server/security/: utils.py
server/chat_server/services/: authorization_service.py  channel_service.py  message_broker.py  moderation_service.py  mute_service.py
server/scripts/: reset_chat.py
server/src/chat_server/: main.py  settings.py
server/tests/: conftest.py  test_crud.py  test_dashboard_channels.py  test_dashboard_users.py
server/tests/repositories/: test_messages.py  test_mutes.py  test_users.py
server/tests/services/: test_auth_service.py  test_channel_service.py  test_moderation_service.py  test_user_service.py
(+43 files in other folders)
