[project]
name = "justchat"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
  "argon2-cffi>=25.1.0",
  "fastapi[standard]>=0.128.7",
  "passlib>=1.7.4",
  "psycopg[binary]>=3.3.2",
  "pyjwt>=2.11.0",
  "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.22.1",
  "fakeredis>=2.33.0",
  "greenlet>=3.3.1",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
